--- a/projekt web test/assets/style.css
+++ b/projekt web test/assets/style.css
@@ -10,6 +10,11 @@ html
     font-family: 'El Messiri',sans-serif;
 }
 
+@font-face {
+    font-family: Glaive;
+    src: url(./font/Glaive.ttf);
+}
+
 #header
 {
     position: fixed;
@@ -18,6 +23,7 @@ html
     --header-height: 53px;
     height: var(--header-height);
     width: 100%;
+    z-index: 1;
 }
 
 #nav
@@ -80,8 +86,64 @@ html
 
 #banner
 {
-    height: 700px;
+    position: relative;
+    top: -50px;
+    left: 0;
+    height: 1070px;
     width: 100%;
-    background-color: black;
 }
 
+#banner img
+{
+    width: 100%;
+    height: auto;
+}
+
+#banner-content
+{
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 250px 0 0 0;
+    margin-left: 50px;
+}
+
+#banner-content .gameTitle
+{
+    font-size: 6.6vw;
+    font-family: Glaive;
+    background: linear-gradient(to right, #014298 0%, #1c8acf 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 2px #FFA500;
+    margin: 0 auto;
+}
+
+#banner-content a.buyBtn
+{
+    display: block;
+    position: relative;
+    background: url(./img/buy_btn.jpg) left top no-repeat;
+    width: 340px;
+    height: 86px;
+    margin: 20px auto;
+}
+
+#banner-content a.buyBtn::after
+{
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: url(./img/buy_btn.jpg) left top -90px no-repeat;
+    width: 100%;
+    height: 86px;
+    opacity: 0;
+}
+
+#banner-content a.buyBtn:hover::after
+{
+    opacity: 1;
+    transition: 0.3s;
+}
