--- a/projekt web test/assets/style.css
+++ b/projekt web test/assets/style.css
@@ -84,7 +84,7 @@ html
 {
     position: relative;
     display: block;
-    font-size: 1.25rem;
+    font-size: 20px;
     padding: 0 10px;
     margin: 0 17px;
     letter-spacing: 0.1em;
@@ -143,7 +143,7 @@ html
 #banner-content
 {
     position: absolute;
-    right: 2vw;
+    right: 1vw;
     top: 0;
     padding: 39vh 0 0 0;
     margin-left: 50px;
@@ -151,7 +151,7 @@ html
 
 #banner-content .gameTitle
 {
-    font-size: 5vw;
+    font-size: 5.4vw;
     font-family: 'Philosopher', sans-serif;
     font-weight: 300;
     /* background: linear-gradient(to right, #ff7e5f 0%, #feb47b 100%);
@@ -305,6 +305,8 @@ html
 {
     position: relative;
     text-align: center;
+    width: 100%;
+    height: 1088px;
 }
 
 #introduction .bg-deco-1
@@ -367,4 +369,54 @@ html
     height: 180px;
     top: 900px;
     z-index: -1;
+}
+
+
+#story
+{
+    position: relative;
+    width: 100%;
+    height: 1000px;
+    margin-top: -10px;
+    background: url(./img/story.jpg) center top no-repeat;
+    background-size: cover;
+}
+
+#story-content
+{
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-align: right;
+    padding: 70px 80px 0 0 ;
+}
+
+#story-content h2
+{
+    font-size: 116px;
+    text-shadow:
+    0 0 7px #e9af6a,
+    0 0 10px #e9af6a,
+    0 0 21px #e9af6a,
+    0 0 42px #f6e680,
+    0 0 82px #f6e680,
+    0 0 92px #f6e680,
+    0 0 102px #f6e680,
+    0 0 151px #f6e680;
+    color: #fff;
+    font-weight: normal;
+}
+
+#story-content p
+{
+    font-size: 26px;
+	color: #fff;
+    text-shadow:
+    0 0 7px #e9af6a,
+    0 0 10px #e9af6a,
+    0 0 21px #e9af6a,
+    0 0 42px #f6e680;
+    line-height: 70px;
+    font-weight: bold;
+    letter-spacing: 0.04em;
 }
