--- a/projekt web test/assets/style.css
+++ b/projekt web test/assets/style.css
@@ -579,3 +579,87 @@ h2
     width: 57.0625vw;
     height: 32.125vw;
 }
+
+
+#creator
+{
+    position: relative;
+    height: 1000px;
+    width: 100%;
+    margin-top: -130px;
+    padding-top: 100px;
+    text-align: center;
+    overflow: hidden;
+}
+
+
+#creator h2
+{
+    font-size: 120px;
+}
+
+#creator-content
+{
+    display: flex;
+    width: 100%;
+    height: 535px;
+    margin-top: 50px;
+}
+
+#creator-content .chad
+{
+    width: 50%;
+    padding: 20px;
+    background: url(./img/creator-1.png) center top no-repeat;
+    background-size: contain;
+    vertical-align: middle;
+}
+
+#creator-content .chad + .chad
+{
+    background: url(./img/creator-2.png) center top no-repeat;
+    background-size: contain;
+}
+
+.chad div
+{
+    height: 490px;
+    padding-top: 70px;
+    border: 1px solid #0961ba;
+}
+
+.chad div h4
+{
+    font-size: 30px;
+    letter-spacing: 0.1rem;
+}
+
+.chad div h3
+{
+    display: block;
+    margin: 10px 0 50px;
+    font-size: 45px;
+    background: rgba(255, 255, 255, 0.6);
+    padding: 9px 0 7px;
+    letter-spacing: 0.2rem;
+}
+
+.chad div p
+{
+    font-size: 23px;
+    text-align: left;
+    line-height: 40px;
+    padding: 0 75px;
+}
+
+#sky-bg
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: url(./img/sky.jpg) center bottom no-repeat;
+    background-size: cover;
+    z-index: -100;
+}
