--- a/projekt web test/assets/style.css
+++ b/projekt web test/assets/style.css
@@ -561,6 +561,51 @@ h2 {
   padding: 0 75px;
 }
 
+
+#footer
+{
+    position: relative;
+    width: 100%;
+    background-color: rgba(254,247,148,0.5);
+    border-top: #bbb solid 1px;
+    padding-bottom: 80px;
+    text-align: center;
+}
+
+#footer-content
+{
+    padding-top: 50px;
+}
+
+#footer-content .link
+{
+    display: flex;
+    justify-content: space-around;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+#footer-content .link a
+{
+    display: block;
+    width: 45%;
+    height: 80px;
+    background: url(./img/entergram.png) center center no-repeat;
+    background-size: cover;
+}
+
+#footer-content .link a + a
+{
+    background: url(./img/07th-expansion.png) center center no-repeat;
+}
+
+#footer-content .copyright
+{
+    padding-top: 50px;
+    font-size: 25px;
+    line-height: 60px;
+}
+
 #sky-bg {
   position: fixed;
   top: 0;
