--- a/frontend/src/components/forum/homethread/homethread.css
+++ b/frontend/src/components/forum/homethread/homethread.css
@@ -3,16 +3,15 @@
   flex-direction: row;
 }
 
-img {
+.homethreadContainer img {
   align-self: center;
   justify-content: center;
-  margin: auto;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
 }
 
 .threadDescContainer {
-  margin-left: 10px;
+  margin-left: 20px;
   flex: 2 1 300px;
   display: flex;
   flex-direction: column;
@@ -21,9 +20,12 @@ img {
 
 .threadDescContainer > a {
   flex: 1;
+  text-decoration: none;
 }
 .threadDescContainer > a > h3 {
-  padding: 3px 0px;
+  padding: 5px 0px;
+  color: #0961ba;
+  font-size: 18px;
 }
 
 .threadDescContainer > div {
@@ -32,7 +34,8 @@ img {
 
 .threadDescContainer > div > span {
   margin-right: 10px;
-  margin-top: auto;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .stateContainer {
@@ -46,6 +49,13 @@ img {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
+  justify-content: space-around;
+  max-width: 120px;
+  margin-right: 50px;
+}
+
+.stateContainer > div > p {
+  line-height: 10 px;
 }
 
 .stateLastComment {
@@ -57,5 +67,9 @@ img {
 
 .stateLastComment > span {
   flex: 1;
-  padding: 5px 10px;
+  padding: 7px 10px;
+}
+
+.stateLastComment > span + span {
+  padding-bottom: 0;
 }
