--- a/frontend/src/components/navbarForum/navbarForum.css
+++ b/frontend/src/components/navbarForum/navbarForum.css
@@ -1,2 +1,32 @@
-#header {
+#forum-header {
+  background-color: #fff;
+}
+
+#forum-header .search-form {
+  display: flex;
+  align-items: center;
+  width: 600px;
+  margin-right: auto;
+  margin-left: 30px;
+}
+
+#forum-header .search-form input {
+  width: 100%;
+  padding: 12px 12px 12px 20px;
+  margin-right: 10px;
+  border: none;
+  color: #191e1e;
+  background: #f3f4f5;
+  border-radius: 20px;
+}
+
+#forum-header .search-form button {
+  border: none;
+  background-color: #fff;
+  color: #0961ba;
+}
+
+#forum-header .search-form button:hover {
+  color: #d8245b;
+  cursor: pointer;
 }
