--- a/frontend/src/pages/forum/login/login.css
+++ b/frontend/src/pages/forum/login/login.css
@@ -1,51 +1,51 @@
-h1 {
-  margin: 120px 0px 20px 20vw;
+#login-content {
+  padding-top: 100px;
 }
 
+#login-content h1 {
+  font-size: 40px;
+  letter-spacing: 0.2rem;
+}
+
+.loginForm {
+  margin-top: 50px;
+}
 .box {
-  /* margin: auto; */
-  width: 60vw;
-  height: 30vh;
+  height: 300px;
   display: flex;
   flex-direction: row;
-  border: 1px solid;
+  box-shadow: 0 4px 8px 0 rgba(107, 119, 128, 0.12),
+    2px 0 8px rgba(107, 119, 128, 0.08);
 }
 
 .labelContainer {
-  flex: 1;
+  width: 33%;
   background-color: #f9fafa;
-  border: 1px solid;
+  border-right: 1px solid #e0e0e0;
+  padding: 15px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  font-size: 25px;
 }
 
 .inputContainer {
   padding: 15px 20px;
-  flex: 1.5;
+  width: 67%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  background-color: #fff;
 }
 
-.inputContainer > * {
-  flex: 1;
-}
-
-.loginButton {
-  position: relative;
-  margin-top: 5vh;
-  left: 70vw;
-  width: 10vw;
-  height: 5vh;
-  border-radius: 25px;
-  border: none;
-  background-color: red;
-}
-
-.loginButton > * {
-  align-content: center;
-  color: #f9fafa;
-  text-align: center;
-}
-
-.loginButton > span {
-  display: inline-block;
-  align-items: center;
+.loginForm .normalBtn {
+  width: 200px;
+  height: 58px;
+  margin-top: 50px;
+  float: right;
+  font-size: 25px;
+  font-family: "El Messiri", sans-serif;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
 }
