--- a/frontend/src/pages/forum/register/register.css
+++ b/frontend/src/pages/forum/register/register.css
@@ -1,51 +1,31 @@
-h1 {
-  margin: 120px 0px 20px 20vw;
+#register-content {
+  padding-top: 100px;
 }
 
-.box {
-  margin: auto;
-  width: 60vw;
-  height: 50vh;
-  display: flex;
-  flex-direction: row;
-  border: 1px solid;
+#register-content h1 {
+  font-size: 40px;
+  letter-spacing: 0.2rem;
 }
 
-.labelContainer {
-  flex: 1;
-  background-color: #f9fafa;
-  border: 1px solid;
+.registerForm {
+  margin-top: 50px;
 }
 
-.inputContainer {
-  padding: 15px 20px;
-  flex: 1.5;
-  display: flex;
-  flex-direction: column;
+.registerForm .box {
+  height: 450px;
 }
 
-.inputContainer > * {
-  flex: 1;
+.registerForm .normalBtn {
+  width: 200px;
+  height: 58px;
+  margin-top: 50px;
+  float: right;
+  font-size: 25px;
+  font-family: "El Messiri", sans-serif;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
 }
 
-.registerButton {
-  position: relative;
-  margin-top: 5vh;
-  left: 70vw;
-  width: 10vw;
-  height: 5vh;
-  border-radius: 25px;
-  border: none;
-  background-color: red;
-}
-
-.registerButton > * {
-  align-content: center;
-  color: #f9fafa;
-  text-align: center;
-}
-
-.registerButton > span {
-  display: inline-block;
-  align-items: center;
+.registerForm .inputContainer {
+  padding-bottom: 5px;
 }
