--- a/frontend/src/components/forum/homethread/homethread.css
+++ b/frontend/src/components/forum/homethread/homethread.css
@@ -29,7 +29,7 @@
   color: #d8245b;
 }
 
-.threadDescContainer > div > span {
+.threadDescContainer > div > a {
   margin-right: 10px;
   font-size: 16px;
   line-height: 24px;
