--- a/frontend/src/pages/forum/home/homeforum.css
+++ b/frontend/src/pages/forum/home/homeforum.css
@@ -30,8 +30,7 @@
   height: 50px;
   float: right;
   font-size: 23px;
-  font-family: "El Messiri", sans-serif;
-  letter-spacing: 0.1rem;
+  margin: 0;
 }
 
 #home-forum-content .forum-discussion ul {
