--- a/frontend/src/pages/main/home/style.css
+++ b/frontend/src/pages/main/home/style.css
@@ -156,6 +156,8 @@
   text-align: center;
   width: 100%;
   height: 1088px;
+  background-color: white;
+  z-index: -10;
 }
 
 #introduction .bg-deco-1 {
@@ -280,7 +282,7 @@
   line-height: 118px;
   text-shadow: 0 0 12px #5dccff, 0 0 12px #5dccff;
   color: #fff;
-  transition: 2s;
+  transition: 5s;
 }
 
 #character-content .character-title .normalBtn {
@@ -306,7 +308,7 @@
   font-size: 18px;
   line-height: 31px;
   letter-spacing: 0.03rem;
-  transition: 2s;
+  transition: 5s;
 }
 
 #character-img {
@@ -316,7 +318,6 @@
   transform: translate(-50%, 0);
   width: 500px;
   height: 1290px;
-  transition: 2s;
 }
 
 #character .character-background {
