--- a/frontend/src/components/navbarAdmin/navbaradmin.css
+++ b/frontend/src/components/navbarAdmin/navbaradmin.css
@@ -28,8 +28,9 @@
 }
 
 .user-nav-block {
-  display: flex;
+  display: inline-flex;
   align-items: flex-end;
+  width: fit-content;
   font-size: 30px;
   margin-top: 20px;
   padding-left: 5px;
