--- a/frontend/src/pages/forum/admin/admin.css
+++ b/frontend/src/pages/forum/admin/admin.css
@@ -1,3 +1,10 @@
-#admin {
-  display: flex;
+#admin-content {
+  width: 80vw;
+  height: 100vh;
+  background-color: #f4f7f9;
+}
+
+#admin-content > img {
+  width: 100%;
+  height: 100%;
 }
