--- a/frontend/src/pages/forum/thread/thread.css
+++ b/frontend/src/pages/forum/thread/thread.css
@@ -8,9 +8,14 @@
 
 .thread-banner-content {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   height: 100%;
+}
+
+.thread-banner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .thread-banner-content .thread-title {
@@ -48,6 +53,11 @@
   margin-right: 10px;
   height: 28px;
   width: 28px;
+}
+
+.thread-banner-content .normalBtn {
+  margin: 0;
+  align-self: center;
 }
 
 .thread-body {
