--- a/frontend/src/pages/main/news_page/details_new.css
+++ b/frontend/src/pages/main/news_page/details_new.css
@@ -44,7 +44,7 @@
 .news-description {
   margin: 50px 0;
   width: 100%;
-  min-height: 50%;
+  min-height: 50vh;
   padding: 45px;
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #0961ba;
