--- a/frontend/src/pages/forum/admin/admin.css
+++ b/frontend/src/pages/forum/admin/admin.css
@@ -1,11 +1,14 @@
+.App {
+  display: flex;
+}
+
 .admin-content {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  float: right;
   width: 80vw;
   height: 100vh;
+  overflow: hidden;
   background-color: #f4f7f9;
 }
 
