--- a/frontend/src/pages/main/news_page/news_page.css
+++ b/frontend/src/pages/main/news_page/news_page.css
@@ -1,7 +1,7 @@
 #news-page-content {
   padding-top: 120px;
   text-align: center;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 #news-page-content h2 {
@@ -17,4 +17,14 @@
 
 .news-container .topic {
   margin-bottom: 50px;
+}
+
+#news-page .pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+#news-page .pagination ul li button {
+  color: #0961ba;
 }
