Fix UI Thread and Delete search

--- a/frontend/src/pages/forum/thread/thread.css
+++ b/frontend/src/pages/forum/thread/thread.css
@@ -182,5 +182,11 @@ article .message {
 }
 
 .thread-body > p {
-  /* float: right; */
+  float: right;
+}
+
+.thread-body .pagination {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
 }
