Fix editor style not working

--- a/frontend/src/components/forum/editor/editor.css
+++ b/frontend/src/components/forum/editor/editor.css
@@ -3,7 +3,7 @@
   background-color: #f9fafa;
 }
 
-.ql-editor {
+.editor .ql-editor {
   height: 400px !important;
   background-color: #f9fafa;
   color: black;
