--- a/frontend/src/pages/forum/thread/thread.css
+++ b/frontend/src/pages/forum/thread/thread.css
@@ -130,9 +130,9 @@ article .message {
   font-size: 18px;
 }
 
-.message .message-body {
+.message .message-body.ql-editor {
   min-height: 200px;
-  padding-top: 20px;
+  padding: 20px 0 0;
   font-size: 20px;
   line-height: 40px;
 }
